--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-select-component": "^4.3.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.10.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2"
   },
