--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.2",
     "recharts": "^2.12.7",
