--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
