--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
@@ -27,6 +28,8 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.2",
     "recharts": "^2.12.7",
+    "sweetalert2": "^11.22.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
