--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.3.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
