--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
+    "@headlessui/react": "^2.2.7",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "headlessui": "^0.0.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
